Pojmenování objektů pohyblivých částí směrovky.

--- a/flightgear/TF-G1/Models/TF-G1.ac
+++ b/flightgear/TF-G1/Models/TF-G1.ac
@@ -21999,7 +21999,7 @@ refs 4
 197 0.534296 0.945736
 kids 0
 OBJECT poly
-name "object"
+name "livery"
 loc -4.76837e-07 -0.00127796 0.00124864
 texture "body_all.png"
 crease 45.000000
@@ -230964,7 +230964,7 @@ refs 3
 15766 0 0
 kids 0
 OBJECT poly
-name "object"
+name "rudderL"
 loc 5.84722e-05 -0.00127498 0.00119974
 texture "body_all.png"
 crease 45.000000
@@ -231676,7 +231676,7 @@ refs 3
 53 0 0
 kids 0
 OBJECT poly
-name "object"
+name "rudderR"
 loc -0.000671387 -0.00127498 0.00127916
 texture "body_all.png"
 crease 45.000000
