Posunutí modelu a odebrání nepotřebných animací.

--- a/flightgear/TF-G1/Models/TF-G1.ac
+++ b/flightgear/TF-G1/Models/TF-G1.ac
@@ -14207,7 +14207,7 @@ refs 4
 65 0.771082 0.169915
 kids 0
 OBJECT poly
-name "gearF"
+name "gearFL"
 loc 0.51194 0.11108 0.227298
 data 5
 gearF
@@ -16155,7 +16155,7 @@ refs 4
 233 0.527583 0.948179
 kids 0
 OBJECT poly
-name "gearF"
+name "gearRL"
 loc 0.787488 0.11108 0.226722
 data 5
 gearF
@@ -18103,7 +18103,7 @@ refs 4
 197 0.534296 0.945736
 kids 0
 OBJECT poly
-name "gearF"
+name "gearFR"
 loc 0.509775 0.11108 -0.227294
 data 5
 gearF
@@ -20051,7 +20051,7 @@ refs 4
 233 0.527583 0.948179
 kids 0
 OBJECT poly
-name "gearF"
+name "gearRR"
 loc 0.786379 0.11108 -0.226517
 data 5
 gearF
