Upřesnění pozic koleček do správných poloh.

--- a/flightgear/TF-G1/Models/TF-G1.ac
+++ b/flightgear/TF-G1/Models/TF-G1.ac
@@ -14208,7 +14208,7 @@ refs 4
 kids 0
 OBJECT poly
 name "gearFL"
-loc 0.51194 0.11108 0.227298
+loc 0.508221 0.125675 0.225002
 data 5
 gearF
 texture "body_all.png"
@@ -16156,7 +16156,7 @@ refs 4
 kids 0
 OBJECT poly
 name "gearRL"
-loc 0.787488 0.11108 0.226722
+loc 0.787191 0.125675 0.225002
 data 5
 gearF
 texture "body_all.png"
@@ -18104,7 +18104,7 @@ refs 4
 kids 0
 OBJECT poly
 name "gearFR"
-loc 0.509775 0.11108 -0.227294
+loc 0.508221 0.125675 -0.224998
 data 5
 gearF
 texture "body_all.png"
@@ -20052,7 +20052,7 @@ refs 4
 kids 0
 OBJECT poly
 name "gearRR"
-loc 0.786379 0.11108 -0.226517
+loc 0.787191 0.125675 -0.224998
 data 5
 gearF
 texture "body_all.png"
@@ -22000,7 +22000,7 @@ refs 4
 kids 0
 OBJECT poly
 name "livery"
-loc -4.76837e-07 -0.00127796 0.00124864
+loc -4.76837e-07 -3.00549e-06 -2.79397e-09
 texture "body_all.png"
 crease 45.000000
 numvert 15769
