--- a/utils/Makefile
+++ b/utils/Makefile
@@ -7,6 +7,7 @@ OPENSCAD_APP=openscad
 SLIC3R_APP=slic3r-prusa3d
 #SLIC3R_APP=$(GIT_ROOT)/utils/slicer/Slic3r-1.3.1-dev.AppImage
 
+SOURCES=$(wildcard $(SRC_DIR)/*.scad)
 TARGETS=$(patsubst $(SRC_DIR)/%.scad, $(STL_DIR)/%.stl, $(SOURCES))
 IMAGES=$(patsubst $(SRC_DIR)/%.scad, $(IMG_DIR)/%.png, $(SOURCES))
 
