--- a/utils/Makefile
+++ b/utils/Makefile
@@ -33,7 +33,7 @@ default: $(TARGETS)
 $(STL_DIR)/%.stl: $(SRC_DIR)/%.scad
 	@# Update dependencies and make no-draft version of model.
 	@echo $(GRN) "Render" $< "with" $(OPENSCAD_APP) $(DEF) $(YEL)
-	@-mkdir $(DEP_DIR)
+	@-mkdir $(DEP_DIR) 2> /dev/null
 	@$(OPENSCAD_APP) -D "draft = false" -m make -o $@ -d $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@) $< && echo $(DEF) || echo $(RED) "Chyba v renderovani" $(YEL) 
 	@# Remove absolute paths in dependencies.
 	@#sed -i "s|$(shell pwd)/||" $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
@@ -51,7 +51,8 @@ images: $(IMAGES)
 
 $(IMG_DIR)/%.png : $(STL_DIR)/%.stl
 	@# Create temporary file for fast image rendering.
-	@-mkdir $(GIT_DIR)/tmp
+	@-mkdir $(GIT_DIR)/tmp 2> /dev/null
+	@-mkdir $(GIT_DIR)/tmp/$(STL_DIR) 2> /dev/null
 	@$(eval FILE=$(basename $(notdir $<)))
 	@echo "import(\"$<\");" > $(GIT_DIR)/tmp/$<
 	@# Render PNG image from temporary file.
