render, new submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/lib/stdlib"]
 	path = src/lib/stdlib
 	url = https://github.com/ThunderFly-aerospace/Openscad_stdlib
+[submodule "src/lib/NopSCADlib"]
+	path = src/lib/NopSCADlib
+	url = git@github.com:nophead/NopSCADlib.git
