Uprava makefilu, funkce pro vypocitani posuvu, #270

--- a/src/4printing/Makefile
+++ b/src/4printing/Makefile
@@ -3,7 +3,7 @@ IMG_DIR=../../images/4printing
 SRC_DIR=.
 DEP_DIR=../../dep
 GCD_DIR=../../gcode/4printing
-INI_DIR=../../slicing
+INI_DIR=../../slicing/generic
 GIT_ROOT=../..
 SOURCES=$(wildcard $(SRC_DIR)/*.scad)
 include ../../utils/Makefile
