Uprava makefile s konfiguracnim souborem

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -25,7 +25,6 @@ GRN=" \e[32m "
 YEL=" \e[33m "
 DEF=" \e[39m "
 
-
 all: default images gcode
 slice: default images
 
@@ -62,7 +61,7 @@ $(IMG_DIR)/%.png : $(STL_DIR)/%.stl
 	@# Render PNG image from temporary file.
 	@echo $(YEL)
 	@$(OPENSCAD_APP) -o $@ tmp/$(FILE).scad
-#	@# Remove temporary file
+	#    @# Remove temporary file
 	@rm -f tmp/$<
 	@echo $(DEF)
 
@@ -70,17 +69,28 @@ $(IMG_DIR)/%.png : $(STL_DIR)/%.stl
 gcode: $(GCODES)
 
 $(GCD_DIR)/%.gcode : $(STL_DIR)/%.stl
-	@$(eval CFG_FILE=$(basename $(notdir $<)))
-	@$(eval INI_FILE=$(PWD)/$(INI_DIR)/$(CFG_FILE).ini)
-	@if [ ! -f $(INI_FILE) ]; then\
-		$(eval INI_FILE=$(PWD)/$(INI_DIR)/basic_part.ini) echo "Zmeneno";\
-	fi
+	@$(eval BASENAME=$(basename $(notdir $<)))
+	@$(eval CFG_FILE=$(BASENAME))
+# grep 888_1005 slicing/cfg -c && VAR=`grep 888_1003 slicing/cfg | cut -d',' -f2` || VAR=NONE
+# Obtain configuration file from cfg file
+#	@$(eval INI_FILE=$(PWD)/$(INI_DIR)/$(shell cat $(PWD)/$(INI_DIR)/cfg | grep '$(BASENAME)' | cut -d',' -f2 || deafult))
+	echo $(shell (grep $(BASENAME) slicing/cfg -c))
+	$(eval INI_FILE=$(shell (grep $(BASENAME) slicing/cfg -c && echo `$(BASENAME) slicing/cfg | cut -d',' -f2` || echo default.ini) | cut -d' ' -f2))
 	@echo "INI" "$(INI_FILE)"
+	@$(eval INI_FILE=$(PWD)/$(INI_DIR)/$(shell echo $(INI_FILE) | cut -d' ' -f2))
 
-#	test ! -f $(INI_FILE) ||
-#	#$(eval INI_FILE=$(PWD)/slicing/generic/basic_part.ini)
-	@echo $(GRN) "Slice" $(STL_DIR)/$(CFG_FILE).stl "with" $(SLIC3R_APP) $(DEF) $(YEL)
-	@$(SLIC3R_APP) --load $(INI_FILE) -o $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode --no-gui -j 3 $(PWD)/$(STL_DIR)/$(CFG_FILE).stl || echo $(RED) "Error in slicing"
+	@echo "INI" "$(INI_FILE)" "$(INI_FILE2)"
+# 	echo $(shell test -f $(INI_FILE) && echo yes || echo no)
+# ifeq ($(shell test -f $(INI_FILE) || echo no), no)
+# 	$(eval INI_FILE=$(PWD)/$(INI_DIR)/basic_part.ini)
+# else
+# endif
+#    test ! -f $(INI_FILE) ||
+#    #$(eval INI_FILE=$(PWD)/slicing/generic/basic_part.ini)
+
+	@echo $(GRN) "Slicing" $(STL_DIR)/$(CFG_FILE).stl $(YEL)
+# Slice file with cfg from file
+	@$(SLIC3R_APP) --load $(INI_FILE) -o $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode --no-gui -j 3 $(PWD)/$(STL_DIR)/$(CFG_FILE).stl 2> /dev/null || $(SLIC3R_APP) --load $(INI_FILE_ALT) -o $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode --no-gui -j 3 $(PWD)/$(STL_DIR)/$(CFG_FILE).stl
 	@$(STL_INFO) $(PWD)/$(STL_DIR)/$(CFG_FILE).stl $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode || echo $(RED) "Error in STL positioning"
 	@echo $(DEF)
 
@@ -90,7 +100,7 @@ gcode_clean:
 
 
 arrange: default
-	 $(SIMARRANGE) -x $(PLATE_DIMMENSIONS) -y $(PLATE_DIMMENSIONS) $(ARRANGE_TARGETS)
+	$(SIMARRANGE) -x $(PLATE_DIMMENSIONS) -y $(PLATE_DIMMENSIONS) $(ARRANGE_TARGETS)
 
 clean:
 	rm -f calibration.stl
