Submodul - prehled dilu

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/lib/NopSCADlib"]
 	path = src/lib/NopSCADlib
 	url = git@github.com:nophead/NopSCADlib.git
+[submodule "utils/PrintManagementTools"]
+	path = utils/PrintManagementTools
+	url = git@github.com:roman-dvorak/PrintManagementTools.git
