--- a/utils/Makefile
+++ b/utils/Makefile
@@ -35,7 +35,7 @@ default: $(TARGETS)
 $(STL_DIR)/%.stl: $(SRC_DIR)/%.scad
 	@# Update dependencies and make no-draft version of model.
 	@echo $(GRN) "Render" $< "with" $(OPENSCAD_APP) $(DEF) $(YEL)
-	@mkdir $(DEP_DIR) 2> /dev/null || echo ""
+	@[ -d $(DEP_DIR) ] || mkdir $(DEP_DIR)
 	@$(OPENSCAD_APP) -D "draft = false" -D "week = `date +%V`" -m make -o $@ -d $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@) $< && echo $(DEF) || echo $(RED) "Chyba v renderovani" % $(YEL)
 	@# Remove absolute paths in dependencies.
 	@#sed -i "s|$(shell pwd)/||" $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
@@ -51,8 +51,8 @@ $(STL_DIR)/%.stl: $(SRC_DIR)/%.scad
 images: $(IMAGES)
 $(IMG_DIR)/%.png : $(STL_DIR)/%.stl
 	@# Create temporary file for fast image rendering.
-	@-mkdir tmp > /dev/null
-	@-mkdir tmp/$(STL_DIR) > /dev/null
+	@mkdir tmp > /dev/null || echo " "
+	@mkdir tmp/$(STL_DIR) > /dev/null || echo " "
 	@$(eval FILE=$(basename $(notdir $<)))
 	@#echo "import('../$<'');" > tmp/$<
 	@echo "import(\"../$<\");" > tmp/$(FILE).scad
@@ -74,7 +74,7 @@ $(GCD_DIR)/%.gcode : $(STL_DIR)/%.stl
 # Slice file with cfg from file
 	@$(SLIC3R_APP) --load $(INI_FILE) -o $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode --no-gui -j 3 $(PWD)/$(STL_DIR)/$(CFG_FILE).stl
 # add STL informations to gcode
-	@$(STL_INFO) $(PWD)/$(STL_DIR)/$(CFG_FILE).stl $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode  || echo $(RED) "Error in STL positioning"
+	@$(STL_INFO) $(PWD)/$(STL_DIR)/$(CFG_FILE).stl $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode > /dev/null  || echo $(RED) "Error in STL positioning"
 	@echo $(DEF)
 
 
