--- a/src/4printing/Makefile
+++ b/src/4printing/Makefile
@@ -1,9 +1,10 @@
-STL_DIR=../../STL/4printing
-IMG_DIR=../../images/4printing
+STL_DIR=../../STL/print_plate
+AMF_DIR=../../AMF
+IMG_DIR=../../images/print_plate
 SRC_DIR=.
 DEP_DIR=../../dep
-GCD_DIR=../../gcode/4printing
-INI_DIR=../../slicing/4printing
+GCD_DIR=../../gcode/print_plate
+INI_DIR=../../slicing/print_plate
 GIT_ROOT=../..
 SOURCES=$(wildcard $(SRC_DIR)/*.scad)
 include ../../utils/Makefile
