--- a/src/drawings/Makefile
+++ b/src/drawings/Makefile
@@ -1,8 +1,9 @@
-STL_DIR=../../STL/drawings
-IMG_DIR=../../images/drawings
+STL_DIR=../../STL
+AMF_DIR=../../AMF
+IMG_DIR=../../images
 SRC_DIR=.
 DEP_DIR=../../dep
-GCD_DIR=../../gcode/drawings
+GCD_DIR=../../gcode
 INI_DIR=../../slicing
 GIT_ROOT=../..
 SOURCES=$(wildcard $(SRC_DIR)/*.scad)
