--- a/utils/Makefile
+++ b/utils/Makefile
@@ -11,14 +11,17 @@ STL_INFO=$(GIT_ROOT)/utils/stl_info
 
 
 SOURCES=$(wildcard $(SRC_DIR)/*.scad)
-TARGETS=$(patsubst $(SRC_DIR)/%.scad, $(STL_DIR)/%.stl, $(SOURCES))
+#TARGETS=$(patsubst $(SRC_DIR)/%.scad, $(STL_DIR)/%.stl, $(SOURCES))
+TARGETS=$(patsubst $(SRC_DIR)/%.scad, $(AMF_DIR)/%.amf, $(SOURCES))
 IMAGES=$(patsubst $(SRC_DIR)/%.scad, $(IMG_DIR)/%.png, $(SOURCES))
 
 #STL=$(wildcard $(INI_DIR)/*.ini)
 #GCODES=$(patsubst $(INI_DIR)/*.ini, $(GCD_DIR)/%.gcode, $(STL))
 
 STL=$(wildcard $(STL_DIR)/*.stl)
-GCODES=$(patsubst $(STL_DIR)/%.stl, $(GCD_DIR)/%.gcode, $(STL))
+AMF=$(wildcard $(AMF_DIR)/*.amf)
+#GCODES=$(patsubst $(STL_DIR)/%.stl, $(GCD_DIR)/%.gcode, $(STL))
+GCODES=$(patsubst $(AMF_DIR)/%.amf, $(GCD_DIR)/%.gcode, $(AMF))
 
 RED=" \e[91m "
 GRN=" \e[32m "
@@ -32,18 +35,19 @@ calibration:
 	$(OPENSCAD_APP) -m make -o calibration.stl calibration.scad
 
 default: $(TARGETS)
-$(STL_DIR)/%.stl: $(SRC_DIR)/%.scad
+$(AMF_DIR)/%.amf: $(SRC_DIR)/%.scad
 	@# Update dependencies and make no-draft version of model.
-	@echo $(GRN) "Render" $< "with" $(OPENSCAD_APP) $(DEF) $(YEL)
-	@mkdir $(DEP_DIR) > /dev/null || echo " "
-	@$(OPENSCAD_APP) -D "draft = false" -D "week = `date +%V`" -m make -o $@ -d $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@) $< && echo $(DEF) || echo $(RED) "Chyba v renderovani" % $(YEL)
+	@echo $(GRN) "Render" $< "with" $(OPENSCAD_APP) "to:" $@ $(DEF) $(YEL)
+	@mkdir $(DEP_DIR) > /dev/null && echo " " || echo " "
+#	$(OPENSCAD_APP) -D "draft = false" -D "week = `date +%V`" -m make -o $@ -d $(patsubst $(AMF_DIR)/%.amf, $(DEP_DIR)/%.deps, $@) $< && echo $(DEF) || echo $(RED) "Chyba v renderovani" % $(YEL)
+	$(OPENSCAD_APP) -D "draft = false" -D "week = `date +%V`" -m make -o $@ -d $(patsubst $(AMF_DIR)/%.amf, $(SRC_DIR)/%.scad, $@) $< && echo $(DEF) || echo $(RED) "Chyba v renderovani" % $(YEL)
 	@# Remove absolute paths in dependencies.
 	@#sed -i "s|$(shell pwd)/||" $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
 	@#sed -i "s|$(shell git rev-parse --show-toplevel)/|../../../|" $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
 	@# Sort stl and deps file to keep git changes to minimum.
-	@$(STLSORT) $@ || :
-	@sort -rf $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@) -o $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
-	@sed -i 's|[^\]$$|& \\|' $(patsubst $(STL_DIR)/%.stl, $(DEP_DIR)/%.deps, $@)
+#	#@$(STLSORT) $@ || :
+#	#@sort -rf $(patsubst $(STL_DIR)/%.amf, $(DEP_DIR)/%.deps, $@) -o $(patsubst $(STL_DIR)/%.amf, $(DEP_DIR)/%.deps, $@)
+#	#@sed -i 's|[^\]$$|& \\|' $(patsubst $(STL_DIR)/%.amf, $(DEP_DIR)/%.deps, $@)
 	@echo $(GRN) "DONE: Render" $< $(DEF)
 
 #-include $(wildcard $(DEP_DIR)/*.deps)
@@ -65,16 +69,16 @@ $(IMG_DIR)/%.png : $(STL_DIR)/%.stl
 
 
 gcode: $(GCODES)
-$(GCD_DIR)/%.gcode : $(STL_DIR)/%.stl
+$(GCD_DIR)/%.gcode : $(STL_DIR)/%.amf
 	@$(eval BASENAME=$(basename $(notdir $<)))
 	@$(eval CFG_FILE=$(BASENAME))
 # Obtain configuration file from cfg file
 	$(eval INI_FILE=$(PWD)/$(INI_DIR)/$(shell grep $(BASENAME) $(INI_DIR)/cfg -c > /dev/null && echo `grep -m 1 $(BASENAME) $(INI_DIR)/cfg | cut -d',' -f2` || echo `grep default $(INI_DIR)/cfg | cut -d',' -f2`))
-	@echo $(GRN) "Slicing " $(STL_DIR)/$(CFG_FILE).stl "with profile" $(INI_FILE) $(YEL)
+	@echo $(GRN) "Slicing " $(STL_DIR)/$(CFG_FILE).amf "with profile" $(INI_FILE) $(YEL)
 # Slice file with cfg from file
 	@$(SLIC3R_APP) --load $(INI_FILE) -o $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode --no-gui -j 3 $(PWD)/$(STL_DIR)/$(CFG_FILE).stl
 # add STL informations to gcode
-	@$(STL_INFO) $(PWD)/$(STL_DIR)/$(CFG_FILE).stl $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode > /dev/null  || echo $(RED) "Error in STL positioning"
+#	@$(STL_INFO) $(PWD)/$(STL_DIR)/$(CFG_FILE).stl $(PWD)/$(GCD_DIR)/$(CFG_FILE).gcode > /dev/null  || echo $(RED) "Error in STL positioning"
 	@echo $(DEF)
 
 
