--- a/src/4printing/Makefile
+++ b/src/4printing/Makefile
@@ -1,9 +1,9 @@
 STL_DIR=../../STL/print_plate
-AMF_DIR=../../AMF
-IMG_DIR=../../images/print_plate
+AMF_DIR=../../AMF/print_plate
+IMG_DIR=../../images
 SRC_DIR=.
 DEP_DIR=../../dep
-GCD_DIR=../../gcode/print_plate
+GCD_DIR=../../gcode
 INI_DIR=../../slicing/print_plate
 GIT_ROOT=../..
 SOURCES=$(wildcard $(SRC_DIR)/*.scad)
